feat(browser): estiliza navbar + selected item

--- a/apps/analytics/src/app/assets/variables.scss
+++ b/apps/analytics/src/app/assets/variables.scss
@@ -2,6 +2,11 @@
 $font-sm: 0.8rem;
 
 // CROMATICAS
+//Globales
+$andes-celeste: rgb(230, 245, 255);
+$andes-info: deepskyblue;
+$andes-degrade: linear-gradient(to right, rgba(0, 157, 201, 1),rgba(133, 49, 136, 1), rgba(244, 164, 126, 1));
+
 // Semantics
 $anomalia: crimson;
 $atributo: rgb(40, 55, 167);
