--- a/libs/snomed/src/lib/components/concept-diagram/graph-nav.component.html
+++ b/libs/snomed/src/lib/components/concept-diagram/graph-nav.component.html
@@ -1,4 +1,4 @@
-<svg:svg version="1.1" width="100%" height="600px" *ngIf="concept">
+<svg:svg version="1.1" width="900px" height="600px" *ngIf="concept">
     <defs id="SctDiagramsDefs">
         <marker id="BlackTriangle" refX="0" refY="10" markerWidth="8" markerHeight="6" orient="auto" viewBox="0 0 22 20"
                 markerUnits="strokeWidth" fill="black" stroke="black" stroke-width="2">
