--- a/libs/ui/src/lib/navbar/navbar.component.html
+++ b/libs/ui/src/lib/navbar/navbar.component.html
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">ANDES | Analytics</a>
+    <a class="navbar-brand" href="#">
+        <i class="adi adi-andes-marca"></i>
+        <i class="adi adi-andes-acronimo"></i>
+        <span class="text-info"> | Analytics</span>
+    </a>
 
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed">
         <span class="navbar-toggler-icon"></span>
