--- a/apps/analytics/src/app/components/snomed-concept-search/snomed-search.component.scss
+++ b/apps/analytics/src/app/components/snomed-concept-search/snomed-search.component.scss
@@ -1,3 +1,5 @@
+@import './../../assets/variables.scss';
+
 .contenedor-semantic-tags {
     width: 100%;
     display: flex;
@@ -25,10 +27,19 @@
     height: calc(100vh - 140px);
 
     .list-group-item {
-        padding: 0.25rem 0.25rem;
+        padding: 0.25rem 0.5rem;
+        box-sizing: border-box;
+
         cursor: pointer;
          &:hover {
-             background-color: lightgray;
+             background-color: $andes-celeste
+         }
+         
+         &.selected {
+            box-shadow: inset 0 0 0 1px deepskyblue;
+            background-color: $andes-celeste !important;
+            color: black;
+            box-sizing: border-box;
          }
     }
 }
