--- a/apps/analytics/src/app/views/concept-detail/concept-detail.view.scss
+++ b/apps/analytics/src/app/views/concept-detail/concept-detail.view.scss
@@ -9,6 +9,12 @@
 
         padding: 0 1rem;
         overflow-y: auto;
+
+        .diagram-panel {
+            overflow-x: auto;
+            width: 100%;
+        }
+
     }
     
     .lateral-panel {
