--- a/apps/analytics/src/app/views/sanddance-view/sanddance-view.view.html
+++ b/apps/analytics/src/app/views/sanddance-view/sanddance-view.view.html
@@ -21,7 +21,7 @@
         </app-navbar-detail-component>
 
         <iframe #frame style="height:calc(100% - 58px); width:100%;border:none"
-                src="https://sanddance.js.org/embed/v1/sanddance-embed.html"></iframe>
+                src="https://microsoft.github.io/SandDance/embed/v1/sanddance-embed.html"></iframe>
     </div>
 
 
